--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,12 +8,22 @@
   margin: 0;
   padding: 0;
 }
-
+.canvas-container{
+  height: 100%;
+  width: 100%;
+}
+.canvas-controls{
+  height: 5%;
+  
+}
+.canvas-spacing{
+  height: 1%;
+}
 .canvas {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  height: 94%;
   width: 100%;
   position: relative;
   border: solid 1px white;
