--- a/styles/globals.css
+++ b/styles/globals.css
@@ -84,6 +84,29 @@
   border-radius: 10px;
 }
 
+.node-enter {
+  opacity: 0;
+  transform: scale(0.9);
+}
+
+.node-enter-active {
+  opacity: 1;
+  transform: scale(1);
+  transition: opacity 200ms, transform 200ms;
+}
+
+.node-exit {
+  opacity: 1;
+  transform: scale(1);
+}
+
+.node-exit-active {
+  opacity: 0;
+  transform: scale(0.9);
+  transition: opacity 200ms, transform 200ms;
+}
+
+
 .link {
   position: 'absolute';
   top: 0;
